# PI_EMS

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  OPERATIONS.md  README.md  config.yaml  pyproject.toml  requirements.txt
pointmaps/: bms_mqtt_generic.yaml  generic_modbus_brandA.yaml  generic_modbus_brandB.yaml  meter_iec62053_generic.yaml  sunspec_inverter_common.yaml  tracker_generic.yaml  weather_serial_generic.yaml
scripts/: emsctl  install_systemd.sh  map_from_csv.py  modbus_scan.py  pointmap_yaml_to_json.py
src/ems/: __init__.py  __main__.py  app.py
src/ems/api/: app.py
src/ems/core/: events.py  health.py  scheduler.py
src/ems/drivers/: __init__.py  base.py  bms_can.py  bms_mqtt.py  dio.py  factory.py  generic_modbus.py  inverter_sunspec.py  meter.py  pointmap.py  tracker.py  weather.py
src/ems/export/: service.py
src/ems/io/: modbus.py
src/ems/store/: database.py  exporter.py
src/ems/ui/static/: style.css  ui.js
src/ems/ui/templates/: index.html
src/ems/uplink/: publisher.py
src/ems/utils/: config.py  logging.py  models.py
systemd/: ems.service
tests/: test_api.py  test_config.py  test_exporter.py  test_generic_modbus.py
