[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-ems"
version = "0.1.0"
authors = [
  {name = "GES Energy Systems", email = "engineering@example.com"}
]
description = "Raspberry Pi based Solar PV EMS edge agent"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: POSIX :: Linux"
]

[project.urls]
Homepage = "https://example.com/pi-ems"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["ems"]

